# tanit

./: Dockerfile  README.md  docker-compose.yaml  s3-parquet-connector.json
merger/: Cargo.toml
merger/src/lib/: domain.rs
merger/src/lib/application/: http.rs  messaging.rs  ports.rs
merger/src/lib/application/http/: handlers.rs
merger/src/lib/application/http/handlers/: get_ferries.rs
merger/src/lib/domain/car/: models.rs  ports.rs  service.rs
merger/src/lib/domain/ferri/: models.rs  ports.rs  service.rs
merger/src/lib/domain/passenger/: models.rs  ports.rs  service.rs
merger/src/lib/infrastructure/: repositories.rs
merger/src/lib/infrastructure/messaging/: kafka.rs
merger/src/lib/infrastructure/repositories/: in_memory_car_repository.rs  in_memory_ferri_repository.rs  in_memory_passenger_repository.rs
producer/: .gitignore  Cargo.toml
producer/src/lib/: infrastructure.rs
producer/src/lib/application/: http.rs  messaging.rs  ports.rs
producer/src/lib/domain/: models.rs  ports.rs  services.rs
producer/src/lib/domain/car/: models.rs  ports.rs  services.rs
producer/src/lib/domain/ferry/: models.rs  ports.rs  services.rs
producer/src/lib/domain/passenger/: models.rs  ports.rs  services.rs
producer/src/lib/infrastructure/: env.rs
producer/src/lib/infrastructure/messaging/: kafka.rs
saver/: .gitignore  Cargo.toml
saver/src/: main.rs
saver/src/lib/: application.rs  infrastructure.rs
saver/src/lib/application/: ports.rs
saver/src/lib/infrastructure/messaging/: kafka.rs
trino/etc/catalog/: hive.properties
