[package]
name = "merger"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "server"

[lib]
path = "src/lib/lib.rs"
name = "tanit"

[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
rdkafka = "0.37.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
