[package]
name = "producer"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "server"

[lib]
path = "src/lib/lib.rs"
name = "tanit"


[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
clap = "4.5.26"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
