[package]
name = "producer"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "server"

[lib]
path = "src/lib/lib.rs"
name = "tanit"


[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
clap = { version = "4.5.26", features = ["derive", "env"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
fake = "3.1.0"
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] }
serde_json = "1.0"
kafka = "0.10.0"
reqwest = { version = "0.12.12", features = ["json"] }
urlencoding = "2.1.2"
rdkafka = "0.37.0"

dotenv = "0.15.0"
futures = "0.3.31"
avro-rs = "0.13.0"
schema_registry_converter = { version = "4.2.0", features = ["avro"] }
serde_bytes = "0.11.15"
apache-avro = "0.17.0"
